Cancel and renaming

--- a/JorkFoodSite/Client/Pages/Add.razor
+++ b/JorkFoodSite/Client/Pages/Add.razor
@@ -31,7 +31,7 @@
         {
             string text = split[i].Trim();
 
-            if (text == text.ToUpper() || text == "други")
+            if (text == text.ToUpper() || text == "други" || text == "🥡 други 🥡")
             {
                 if (startIndex != -1 && currentGroup != null)
                 {
