Adding name to be visible

--- a/JorkFoodSite/Client/Shared/MainLayout.razor
+++ b/JorkFoodSite/Client/Shared/MainLayout.razor
@@ -26,6 +26,10 @@
     <i class="fa-solid fa-circle-user" />
 </div>
 
+<div class="person-name">
+    @Constants.PersonName
+</div>
+
 @code {
     private string name = string.Empty;
     private bool pickedName;
