--- a/JorkFoodSite/Client/Pages/Orders.razor
+++ b/JorkFoodSite/Client/Pages/Orders.razor
@@ -9,7 +9,7 @@
             @foreach (var order in orders)
             {
                 <li>
-                    <span>@order.Name (@order.People)</span>
+                    <span>@order.Name (@order.People) - @order.Count бр.</span>
                 </li>
             }
         </ul>
