--- a/JorkFoodSite/Client/Pages/Index.razor
+++ b/JorkFoodSite/Client/Pages/Index.razor
@@ -31,6 +31,10 @@
                         </li>
                     }
                 </ul>
+
+                <div>
+                    Кутия за еднокр. употреба @(orders.Count)бр @((orders.Count * 0.20).ToString("0.00"))лв
+                </div>
             }
             else
             {
