--- a/JorkFoodSite/Client/Pages/Index.razor.css
+++ b/JorkFoodSite/Client/Pages/Index.razor.css
@@ -11,16 +11,11 @@
 .person-orders-btn {
     position: fixed;
     display: inline-block;
-    top: 5px;
-    right: 5px;
+    top: 10px;
+    right: 10px;
 }
 
-    .person-orders-btn .fa-solid {
-        font-size: 20px;
-    }
-
 .person-orders-content {
-    display: none;
     position: absolute;
     background-color: var(--card-color);
     min-width: 260px;
@@ -28,10 +23,7 @@
     padding: 12px 16px;
     z-index: 200;
     right: 0;
-}
-
-.person-orders-btn:hover .person-orders-content {
-    display: block;
+    margin-right: -5px;
 }
 
 .person-order-button {
