--- a/JorkFoodSite/Client/Shared/ProductCard.razor.css
+++ b/JorkFoodSite/Client/Shared/ProductCard.razor.css
@@ -10,6 +10,10 @@
         opacity: 1;
     }
 
+.card-active > .card-content {
+    background-color: rgb(50, 50, 50) !important;
+}
+
 .card {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
@@ -57,6 +61,7 @@
         inset: 1px;
         padding: 10px;
         position: absolute;
+        transition: background-color linear 275ms;
     }
 
 .card-image {
