--- a/JorkFoodSite/Client/wwwroot/css/app.css
+++ b/JorkFoodSite/Client/wwwroot/css/app.css
@@ -1,22 +1,7 @@
 :root {
     --bg-color: rgb(20, 20, 20);
     --card-color: rgb(23, 23, 23);
-}
-
-::-webkit-scrollbar {
-    height: 12px;
-    width: 12px;
-    background: #000;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgb(0, 63, 43);
-    -webkit-border-radius: 1ex;
-    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
-}
-
-::-webkit-scrollbar-corner {
-    background: #000;
+    color-scheme: dark;
 }
 
 * {
@@ -27,10 +12,6 @@
 h1, h2, h3, h4, span, label {
     margin: 0px;
     font-weight: 400;
-}
-
-input, textarea, button {
-    color: black !important;
 }
 
 body {
