--- a/JorkFoodSite/Client/Pages/Orders.razor.css
+++ b/JorkFoodSite/Client/Pages/Orders.razor.css
@@ -6,8 +6,22 @@
 .orders-group {
     display: flex;
     flex-direction: column;
+    max-width: 1000px;
+}
+
+ul {
+    list-style: none;
 }
 
 li {
     font-size: 16px;
+    background-color: rgb(35, 35, 35);
+    margin: 8px 0;
+    padding: 6px 16px;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+}
+
+span {
+    color: gainsboro;
 }
