--- a/JorkFoodSite/Client/Pages/Orders.razor.css
+++ b/JorkFoodSite/Client/Pages/Orders.razor.css
@@ -14,6 +14,8 @@ ul {
 }
 
 li {
+    display: flex;
+    flex-direction: column;
     font-size: 16px;
     background-color: rgb(35, 35, 35);
     margin: 8px 0;
@@ -21,6 +23,15 @@ li {
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
 }
+
+    li .title {
+        width: 100%;
+    }
+
+    li .info {
+        display: flex;
+        justify-content: space-between;
+    }
 
 span {
     color: gainsboro;
