--- a/JorkFoodSite/Client/Pages/Orders.razor.css
+++ b/JorkFoodSite/Client/Pages/Orders.razor.css
@@ -6,7 +6,11 @@
 .orders-group {
     display: flex;
     flex-direction: column;
-    max-width: 1000px;
+    width: 800px;
+}
+
+.orders-price {
+    align-self: end;
 }
 
 ul {
