--- a/JorkFoodSite/Client/Pages/Index.razor
+++ b/JorkFoodSite/Client/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/home"
 
 @if (ProductGroups != null)
 {
@@ -16,46 +16,3 @@ else
     <span>Менюто зарежда</span>
 }
 
-<div class="person-orders-btn">
-    <i class="fa-solid fa-bag-shopping" @onclick="OpenOrders" />
-</div>
-
-<div class="orders-container @(IsOrdersVisible ? "orders-visible" : "")" @onclick="CloseOrders">
-</div>
-
-<div class="orders-drawer @(IsOrdersVisible ? "orders-visible" : "")">
-    @if (Constants.Orders != null)
-    {
-        if (Constants.Orders.Count > 0)
-        {
-            <div class="orders-content">
-                @foreach (var order in Constants.Orders)
-                {
-                    <div class="text">@order.Name</div>
-                    <button @onclick="() => CancelOrder(order)">
-                        <i class="fa-solid fa-minus" />
-                    </button>
-                    <div class="count">Брой @order.Count</div>
-                    <button @onclick="() => AddOrder(order)">
-                        <i class="fa-solid fa-plus" />
-                    </button>
-                }
-            </div>
-
-            <div>
-                Кутия за еднократна употреба @(Constants.Orders.Sum(f => f.Count))бр @((Constants.Orders.Sum(f => f.Count) * 0.20).ToString("0.00"))лв
-            </div>
-            <div class="orders-price">
-                Общо @((Constants.Orders.Sum(f => f.Price * f.Count) + Constants.Orders.Sum(f => f.Count) * 0.20).ToString("0.00"))лв
-            </div>
-        }
-        else
-        {
-            <span>Все още нямаш поръчки!</span>
-        }
-    }
-    else
-    {
-        <span>Поръчките се теглят</span>
-    }
-</div>
