--- a/JorkFoodSite/Client/Shared/MainLayout.razor
+++ b/JorkFoodSite/Client/Shared/MainLayout.razor
@@ -47,3 +47,50 @@ else
 <div class="person-name">
     @Constants.PersonName
 </div>
+
+<div class="person-orders-btn">
+    <i class="fa-solid fa-bag-shopping" @onclick="OpenOrders" />
+</div>
+
+@if (IsOrdersVisible)
+{
+    <div class="orders-container @(IsOrdersClosing ? "orders-container-closing" : "")" @onclick="CloseOrders">
+    </div>
+
+    <div class="orders-drawer @(IsOrdersClosing ? "orders-drawer-closing" : "")">
+        @if (Constants.Orders != null)
+        {
+            if (Constants.Orders.Count > 0)
+            {
+                <div class="orders-content">
+                    @foreach (var order in Constants.Orders)
+                    {
+                        <div class="text">@order.Name</div>
+                        <button @onclick="() => CancelOrder(order)">
+                            <i class="fa-solid fa-minus" />
+                        </button>
+                        <div class="count">Брой @order.Count</div>
+                        <button @onclick="() => AddOrder(order)">
+                            <i class="fa-solid fa-plus" />
+                        </button>
+                    }
+                </div>
+
+                <div>
+                    Кутия за еднократна употреба @(Constants.Orders.Sum(f => f.Count))бр @((Constants.Orders.Sum(f => f.Count) * 0.20).ToString("0.00"))лв
+                </div>
+                <div class="orders-price">
+                    Общо @((Constants.Orders.Sum(f => f.Price * f.Count) + Constants.Orders.Sum(f => f.Count) * 0.20).ToString("0.00"))лв
+                </div>
+            }
+            else
+            {
+                <span>Все още нямаш поръчки!</span>
+            }
+        }
+        else
+        {
+            <span>Поръчките се теглят</span>
+        }
+    </div>
+}
