--- a/JorkFoodSite/Client/wwwroot/css/app.css
+++ b/JorkFoodSite/Client/wwwroot/css/app.css
@@ -92,3 +92,69 @@ i {
 .fa-solid {
     font-size: 30px;
 }
+
+.nav-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+nav {
+    margin: 10px auto;
+}
+
+    nav a {
+        color: #f6f4e6;
+        text-decoration: none;
+        font-size: 1.2em;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: 500;
+        display: inline-block;
+        width: 100px;
+        -webkit-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+    }
+
+        nav a.active {
+            color: #fddb3a;
+        }
+
+        nav a:hover {
+            color: #fddb3a;
+        }
+
+    nav .dot {
+        width: 6px;
+        height: 6px;
+        background: #fddb3a;
+        border-radius: 50%;
+        opacity: 0;
+        -webkit-transform: translateX(46px);
+        transform: translateX(46px);
+        -webkit-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+    }
+
+    nav a:nth-child(1):hover ~ .dot {
+        -webkit-transform: translateX(46px);
+        transform: translateX(46px);
+        -webkit-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+        opacity: 1;
+    }
+
+    nav a:nth-child(2):hover ~ .dot {
+        -webkit-transform: translateX(155px);
+        transform: translateX(155px);
+        -webkit-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+        opacity: 1;
+    }
+
+    nav a:nth-child(3):hover ~ .dot {
+        -webkit-transform: translateX(252px);
+        transform: translateX(252px);
+        -webkit-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+        opacity: 1;
+    }
