--- a/JorkFoodSite/Client/_Imports.razor
+++ b/JorkFoodSite/Client/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using JorkFoodSite.Client
+@using JorkFoodSite.Client.Extensions
 @using JorkFoodSite.Client.Shared
 @using JorkFoodSite.Shared
